--- a/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj.filters
+++ b/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj.filters
@@ -67,6 +67,8 @@
     <ClCompile Include="TombPuzzleScene.cpp" />
     <ClCompile Include="..\src\Components\BehaviorStateComponent.cpp" />
     <ClCompile Include="Room3.cpp" />
+    <ClCompile Include="SlowRotateComponent.cpp" />
+    <ClCompile Include="LockerPuzzle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\lib\OpenAL 1.1 SDK\include\al.h" />
@@ -257,6 +259,8 @@
     <ClInclude Include="TombPuzzleScene.h" />
     <ClInclude Include="..\src\Components\BehaviorStateComponent.h" />
     <ClInclude Include="Room3.h" />
+    <ClInclude Include="SlowRotateComponent.h" />
+    <ClInclude Include="LockerPuzzle.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\src\ecs\RAEDME.md" />
