--- a/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
+++ b/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
@@ -52,6 +52,7 @@
     <ClCompile Include="CSVdataRecolector.cpp" />
     <ClCompile Include="DataManager.cpp" />
     <ClCompile Include="ClockPuzzleScene.cpp" />
+    <ClCompile Include="DialogueAnimComponent.cpp" />
     <ClCompile Include="DialogueManager.cpp" />
     <ClCompile Include="DoorPuzzleScene.cpp" />
     <ClCompile Include="DragPuzzleScene.cpp" />
@@ -241,6 +242,7 @@
     <ClInclude Include="DataManager.h" />
     <ClInclude Include="ClockPuzzleScene.h" />
     <ClInclude Include="DescriptionInfo.h" />
+    <ClInclude Include="DialogueAnimComponent.h" />
     <ClInclude Include="DialogueManager.h" />
     <ClInclude Include="Direction.h" />
     <ClInclude Include="DoorPuzzleScene.h" />
