--- a/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj.filters
+++ b/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj.filters
@@ -67,13 +67,14 @@
     <ClCompile Include="TombPuzzleScene.cpp" />
     <ClCompile Include="..\src\Components\BehaviorStateComponent.cpp" />
     <ClCompile Include="BalancePuzzleScene.cpp" />
-    <ClCompile Include="StrongBoxPuzzle.cpp" />
     <ClCompile Include="CreditsScene.cpp" />
     <ClCompile Include="WiresPuzzleScene.cpp" />
     <ClCompile Include="Room3.cpp" />
     <ClCompile Include="SlowRotateComponent.cpp" />
     <ClCompile Include="LockerPuzzle.cpp" />
     <ClCompile Include="DialogueAnimComponent.cpp" />
+    <ClCompile Include="Box.cpp" />
+    <ClCompile Include="ReadInvdesc.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\lib\OpenAL 1.1 SDK\include\al.h" />
@@ -264,13 +265,14 @@
     <ClInclude Include="TombPuzzleScene.h" />
     <ClInclude Include="..\src\Components\BehaviorStateComponent.h" />
     <ClInclude Include="BalancePuzzleScene.h" />
-    <ClInclude Include="StrongBoxPuzzle.h" />
     <ClInclude Include="CreditsScene.h" />
     <ClInclude Include="WiresPuzzleScene.h" />
     <ClInclude Include="Room3.h" />
     <ClInclude Include="SlowRotateComponent.h" />
     <ClInclude Include="LockerPuzzle.h" />
     <ClInclude Include="DialogueAnimComponent.h" />
+    <ClInclude Include="Box.h" />
+    <ClInclude Include="ReadInvdesc.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\src\ecs\RAEDME.md" />
