--- a/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
+++ b/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
@@ -357,7 +357,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <IncludePath>$(SolutionDir)src\json;$(SolutionDir)src\utils;$(SolutionDir)src\game;$(SolutionDir)src\sdlutils;$(SolutionDir)src\Components;$(SolutionDir)src\ecs;$(SolutionDir)lib\SDL2_net-2.2.0\include;$(SolutionDir)lib\SDL2_mixer-2.8.0\include;$(SolutionDir)lib\SDL2_ttf-2.24.0\include;$(SolutionDir)lib\SDL2_image-2.8.4\include;$(SolutionDir)lib\SDL2-2.30.11\include;$(SolutionDir)lib\OpenAL_1.1_SDK\include;$(SolutionDir)lib\libsndfile-1.2.2\include;$(SolutionDir)lib\FMOD\include;$(IncludePath)</IncludePath>
     <SourcePath>$(SolutionDir)\SRC</SourcePath>
-    <LibraryPath>$(SolutionDir)lib\SDL2_net-2.2.0\lib$(Platform);$(SolutionDir)lib\SDL2_mixer-2.8.0\lib$(Platform);$(SolutionDir)lib\SDL2_ttf-2.24.0\lib$(Platform);$(SolutionDir)lib\SDL2_image-2.8.4\lib$(Platform);$(SolutionDir)lib\SDL2-2.30.11\lib$(Platform);$(SolutionDir)lib\OpenAL_1.1_SDK\lib$(Platform);$(SolutionDir)lib\libsndfile-1.2.2\lib$(Platform);$(SolutionDir)lib\FMOD\lib$(Platform);$(LibraryPath)</LibraryPath>
+    <LibraryPath>$(SolutionDir)lib\SDL2_net-2.2.0\lib\$(Platform);$(SolutionDir)lib\SDL2_mixer-2.8.0\lib\$(Platform);$(SolutionDir)lib\SDL2_ttf-2.24.0\lib\$(Platform);$(SolutionDir)lib\SDL2_image-2.8.4\lib\$(Platform);$(SolutionDir)lib\SDL2-2.30.11\lib\$(Platform);$(SolutionDir)lib\OpenAL_1.1_SDK\lib\$(Platform);$(SolutionDir)lib\libsndfile-1.2.2\lib\$(Platform);$(SolutionDir)lib\FMOD\lib\$(Platform);$(LibraryPath)</LibraryPath>
     <OutDir>$(SolutionDir)\bin\</OutDir>
     <IntDir>$(SolutionDir)\tmp\$(ProjectName)\$(Platform)\$(Configuration)\</IntDir>
     <TargetName>$(ProjectName)$(Configuration)</TargetName>
